# hucx

./: LICENSE  Makefile.am  README  configure.ac
config/m4/: compiler.m4  gtest.m4  mpi.m4  ucg.m4
offset/: Makefile.am  client  client.c  client.h  conf.sh  multi_client.sh  server  server.c  server.h  statistic  statistic.c  utilities.c  utilities.h
src/tools/info/: Makefile.am  group_info.c  proto_info.c  sys_info.c  ucx_info.c  ucx_info.h
src/tools/perf/: perftest.c
src/tools/perf/api/: libperf.h
src/tools/perf/lib/: libperf.c  libperf_int.h  ucp_tests.cc
src/ucp/: Makefile.am
src/ucp/api/: ucp.h
src/ucp/core/: ucp_context.c  ucp_context.h  ucp_ep.c  ucp_ep.inl  ucp_request.h  ucp_types.h  ucp_worker.c  ucp_worker.h
src/ucp/proto/: proto_common.c
src/ucp/rma/: amo_send.c  rma_send.c
src/ucp/rndv/: proto_rndv.c
src/ucp/wireup/: select.c
src/ucs/: Makefile.am
src/ucs/datastruct/: ptr_array.h
src/ucs/debug/: memtrack.h
src/ucs/pmodule/: cache.c
src/ucs/sys/: sock.c  sock.h
src/uct/api/v2/: uct_v2.h
src/uct/base/: uct_iface.c
src/uct/cuda/cuda_copy/: cuda_copy_iface.c
src/uct/cuda/gdr_copy/: gdr_copy_iface.c
src/uct/ib/: configure.m4
src/uct/ib/base/: ib_iface.c  ib_verbs.h
src/uct/ib/dc/: dc_mlx5.c  dc_mlx5_ep.c
src/uct/ib/rc/accel/: rc_mlx5_common.c  rc_mlx5_iface.c
src/uct/ib/rc/verbs/: rc_verbs_iface.c
src/uct/ib/ud/base/: ud_ep.c  ud_ep.h  ud_iface.c  ud_inl.h
test/gtest/: Makefile.am
test/gtest/ucg/: test_builtin.cc  test_cb.cc  test_coll_algorithm.cc  test_collective.cc  test_group.cc  test_op.cc  test_plan.cc  test_step.cc  test_topo_info.cc  ucg_algo_decision_test.cc  ucg_test.cc  ucg_test.h
test/hypertest/: function_test.sh  mpi_test_common.h
